--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@ to exercise sufficient self-determination in the [=context=] of a specific kind 
 privacy protections and should be considered unable to [=consent=] to the [=processing=].
 People can be vulnerable for different reasons, for example because they are children,
 are employees with respect to their employers, are facing a steep asymmetry of power,
-are people in some situations of intellectual or psychological impairment, or are
-refugees.
+are people in some situations of intellectual or psychological impairment, are
+refugees, etc.
 
 ## The Parties {#parties}
 
