Avoid saying that safety systems have to describe how to exploit them. (#249)
SHA: 29d0b4df240bc6b90f05bfad460d6e30ef1f79e0
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1221,9 +1221,10 @@ for other purposes, like to grow the service.</span>
 
 <p>This is a special case of the more general principle that data should not be used for more
 <a data-link-type="dfn" href="#dfn-purpose" class="internalDFN" id="ref-for-dfn-purpose-7">purposes</a> than the data's subjects understood it was being collected for.</p>
-<p>A service should explain how it uses people's data to protect them and other people, and
-how it might additionally use someone's data if it believes that person has broken the
-rules.</p>
+<p>Services sometimes use people's data in order to protect those or other people.
+A service that does this should explain what data it's
+using for this purpose. It should also say how it might use or share a person's
+data if it believes that person has broken the rules.</p>
 </div>
 
 <aside class="example" id="example-technical-legal-measures"><div class="marker">
